# CppMatrix

./: CMakeLists.txt  Doxyfile.in  README.md  buildcontainer.Dockerfile
.github/workflows/: ci.yaml
example/: CMakeLists.txt
example/hexapawn-zero/: sup_network.cpp
example/hexapawn-zero/keras/: dense.cpp  input.cpp  layer.cpp  losses.cpp  model.cpp
example/mnist/: main.cpp  neural_network.cpp
example/porch/src/: CMakeLists.txt  backend.cpp  module.cpp  size.cpp  tensor.cpp
example/porch/test/: CMakeLists.txt  size_test.cpp  tensor_test.cpp
src/: CMakeLists.txt  matrix.cpp  matrix_type.cpp
src/backend/: cpu_matrix.cpp  cuda_matrix.cpp  cuda_matrix.cu  webgpu_matrix.cpp
src/neural_network/: CMakeLists.txt  backend.cpp  functional.cpp  loss_functions.cpp  module.cpp  tensor.cpp
src/neural_network/modules/: linear.cpp  module.cpp
src/nn/: CMakeLists.txt  backend.cpp  module.cpp  tensor.cpp
src/nn/functional/: module.cpp  mse_loss.cpp  sigmoid.cpp
src/nn/modules/: linear.cpp  module.cpp
src/webgpu/: gpu_adapter.cpp
std_patch/: stdfloat
test/: CMakeLists.txt  cpu_matrix_float16_test.cpp  cpu_matrix_float32_test.cpp  cuda_matrix_float16_test.cpp  cuda_matrix_float32_test.cpp  matrix_test.cpp  neural_network_test.cpp  webgpu_matrix_float16_test.cpp  webgpu_matrix_float32_test.cpp
test/neural_network_test/: functional_test.cpp  loss_functions_test.cpp  neural_network_test_common.h  tensor_test.cpp
test/neural_network_test/modules_test/: linear_test.cpp
